--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,103 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.AppForm{
+  width: 100%;
+  background-color: #2E4158;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.PageSwitcher{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.Switch{
+  background-color: #4C5D72;
+  color: #9DA6B1;
+  padding: 10px 25px;
+  cursor: pointer;
+  font-size: 0.95em;
+  border: none;
+  outline: none;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.SwitchActive{
+  background-color: #5ED0C0;
+  color: white;
+}
+
+.Switch:first-child {
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+}
+.Switch:last-child {
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+
+.Forms{
+  margin-left: 40%;
+}
+
+.Title {
+  color: white;
+  font-weight: 300;
+  margin-bottom: 50px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.7em;
+  margin: 0 10px;
+  padding-bottom: 5px;
+}
+
+.Form {
+  margin-bottom: 30px;
+}
+
+.Label {
+  display: block;
+  text-transform: uppercase;
+  font-size: .9em;
+  color: white;
+}
+.Input {
+  width: 50%;
+  background-color: transparent;
+  border: none;
+  color: white;
+  outline: none;
+  border-bottom: 1px solid #445366;
+  font-size: 1em;
+  font-weight: 300;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.Input::placeholder {
+  color: #4C5D72;
+}
+
+.Button {
+  background-color: #52C4B9;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  padding: 15px 70px;
+  font-size: .85em;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.FormMain{
+  text-align: center;
+}
+
+.videoContainer{
+  
 }
