--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,21 @@
 }
 
 .Forms{
-  margin-left: 40%;
+  margin-left: 30%;
 }
 
 .Title {
+  color: black;
+  font-weight: 300;
+  margin-bottom: 50px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.7em;
+  margin: 0 10px;
+  padding-bottom: 5px;
+}
+
+.TitleA {
   color: white;
   font-weight: 300;
   margin-bottom: 50px;
@@ -59,17 +70,21 @@
   margin-bottom: 30px;
 }
 
+.FormA {
+  margin-bottom: 30px;
+}
+
 .Label {
   display: block;
   text-transform: uppercase;
   font-size: .9em;
-  color: white;
+  color: black;
 }
 .Input {
   width: 50%;
   background-color: transparent;
   border: none;
-  color: white;
+  color: black;
   outline: none;
   border-bottom: 1px solid #445366;
   font-size: 1em;
@@ -89,7 +104,7 @@
   outline: none;
   border-radius: 25px;
   padding: 15px 70px;
-  font-size: .85em;
+  font-size: .9em;
   font-weight: 500;
   cursor: pointer;
 }
@@ -98,6 +113,25 @@
   text-align: center;
 }
 
-.videoContainer{
-  
+.LabelA {
+  display: block;
+  text-transform: uppercase;
+  font-size: .9em;
+  color: white;
+}
+.InputA {
+  width: 50%;
+  background-color: transparent;
+  border: none;
+  color: white;
+  outline: none;
+  border-bottom: 1px solid #445366;
+  font-size: 1em;
+  font-weight: 300;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.InputA::placeholder {
+  color: rgb(84, 102, 124);
 }
